--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.8.0",
     "zustand": "^4.5.5"
   },
   "devDependencies": {
