--- a/package.json
+++ b/package.json
@@ -52,13 +52,15 @@
     "@nextui-org/tooltip": "^2.0.39",
     "@nextui-org/user": "^2.0.33",
     "framer-motion": "^11.3.30",
+    "ketcher-core": "^2.24.0",
+    "ketcher-react": "^2.24.0",
+    "ketcher-standalone": "^2.24.0",
     "lucide-react": "^0.441.0",
     "next": "14.2.7",
     "nextui-cli": "^0.3.4",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
-    "react-toastify": "^10.0.5",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
     "zustand": "^4.5.5"
