--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
+    "react-toastify": "^10.0.5",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
     "zustand": "^4.5.5"
