--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "@nextui-org/theme": "^2.2.9",
     "@nextui-org/tooltip": "^2.0.39",
     "@nextui-org/user": "^2.0.33",
+    "appwrite": "^16.0.2",
+    "axios": "^1.7.7",
     "emmet-monaco-es": "^5.4.0",
     "framer-motion": "^11.3.30",
     "ketcher-core": "^2.24.0",
@@ -60,11 +62,13 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.7",
     "nextui-cli": "^0.3.4",
+    "node-appwrite": "^14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.8.0",
+    "swr": "^2.2.5",
     "uuid": "^10.0.0",
     "zustand": "^4.5.5"
   },
