--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "ketcher-react": "^2.24.0",
     "ketcher-standalone": "^2.24.0",
     "lucide-react": "^0.441.0",
+    "moment": "^2.30.1",
     "next": "14.2.7",
     "nextui-cli": "^0.3.4",
     "node-appwrite": "^14.1.0",
