--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "next": "14.2.7",
     "nextui-cli": "^0.3.4",
     "node-appwrite": "^14.1.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
     "react-query": "^3.39.3",
