--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
     "@nextui-org/accordion": "^2.0.38",
@@ -54,12 +55,17 @@
     "@nextui-org/user": "^2.0.33",
     "appwrite": "^16.0.2",
     "axios": "^1.7.7",
+    "emmet-monaco-es": "^5.4.0",
     "framer-motion": "^11.3.30",
+    "ketcher-core": "^2.24.0",
+    "ketcher-react": "^2.24.0",
+    "ketcher-standalone": "^2.24.0",
     "lucide-react": "^0.441.0",
     "moment": "^2.30.1",
     "next": "14.2.7",
     "nextui-cli": "^0.3.4",
     "node-appwrite": "^14.1.0",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
