--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nextui-cli": "^0.3.4",
     "node-appwrite": "^14.1.0",
     "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.8.69",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
