--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "nextui-cli": "^0.3.4",
     "node-appwrite": "^14.1.0",
     "pdf-parse": "^1.1.1",
-    "pdfjs-dist": "^4.8.69",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
@@ -78,6 +78,7 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^12.0.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   }
