--- a/src/server/package.json
+++ b/src/server/package.json
@@ -13,14 +13,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "cloudinary": "^2.5.0",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "express-json": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.7.0",
-    "multer": "^1.4.5-lts.1"
+    "mongoose": "^8.8.2",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.73.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
