Open AI Streaming Coded

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "axios": "^1.7.7",
     "emmet-monaco-es": "^5.4.0",
     "framer-motion": "^11.3.30",
+    "katex": "^0.16.11",
     "ketcher-core": "^2.24.0",
     "ketcher-react": "^2.24.0",
     "ketcher-standalone": "^2.24.0",
@@ -72,6 +73,8 @@
     "react-markdown": "^9.0.1",
     "react-query": "^3.39.3",
     "react-toastify": "^10.0.5",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "socket.io-client": "^4.8.0",
     "swr": "^2.2.5",
     "uuid": "^10.0.0",
