--- a/src/server/package.json
+++ b/src/server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.0",
     "express-json": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.2",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
